--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 
 			<div class="social-links">
 			   <ul>
-					<li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-					<li><a href="#"><i class="fa fa-github"></i></a></li>				     			
+					<li><a href="https://www.linkedin.com/in/hurbert-shauri-1921a2111/"><i class="fa fa-linkedin"></i></a></li>
+					<li><a href="https://github.com/hurbert-shauri"><i class="fa fa-github"></i></a></li>				     			
 				</ul>
 			</div>
    	</div> 
@@ -111,13 +111,13 @@
    		<div class="row">
 				
 	         <ul class="footer-social-list">
-	            <li><a href="#">
+	            <li><a href="https://www.linkedin.com/in/hurbert-shauri-1921a2111/">
 	              	<i class="fa fa-linkedin"></i><span>Linked In</span>
 	            </a></li>
-	            <li><a href="#">
+	            <li><a href="https://github.com/hurbert-shauri">
 	              	<i class="fa fa-github"></i><span>Github</span>
 	            </a></li>
-	            <li><a href="#">
+	            <li><a href="https://www.instagram.com/hurby_hurbz/">
 	              	<i class="fa fa-instagram"></i><span>Instagram</span>
 	            </a></li>
 	         </ul>
